[gd_scene load_steps=7 format=3 uid="uid://y4sj0me3rrwp"]

[ext_resource type="Texture2D" uid="uid://cj1sk4ad316me" path="res://assets/rpg-battle-system/background/tumblr_p7k8f3fMWS1wvbydeo1_1280.png" id="1_3hisy"]
[ext_resource type="Script" path="res://scripts/battle_scene.gd" id="1_u5nxv"]
[ext_resource type="PackedScene" uid="uid://b4gwvqjmw3g7n" path="res://scenes/enemy_group.tscn" id="1_y55fr"]
[ext_resource type="PackedScene" uid="uid://ddjnsnnestsan" path="res://scenes/player_group.tscn" id="3_lkmci"]
[ext_resource type="FontFile" uid="uid://cq3dc84rbkqul" path="res://assets/rpg-battle-system/fonts/ThaleahFat.ttf" id="4_feu23"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmcss"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
expand_margin_top = 8.0
expand_margin_right = 8.0

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_u5nxv")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("1_3hisy")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Choice" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 272.0
offset_top = 76.0
offset_right = 312.0
offset_bottom = 172.0

[node name="Attack" type="Button" parent="CanvasLayer/Choice"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_feu23")
theme_override_font_sizes/font_size = 8
text = "Attack"

[node name="Defend" type="Button" parent="CanvasLayer/Choice"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_feu23")
theme_override_font_sizes/font_size = 8
text = "Defend"

[node name="Magic" type="Button" parent="CanvasLayer/Choice"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_feu23")
theme_override_font_sizes/font_size = 8
text = "Magic"

[node name="Charge" type="Button" parent="CanvasLayer/Choice"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_feu23")
theme_override_font_sizes/font_size = 8
text = "Charge"

[node name="Heal" type="Button" parent="CanvasLayer/Choice"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_feu23")
theme_override_font_sizes/font_size = 8
text = "Heal"

[node name="EnemyGroup" parent="." instance=ExtResource("1_y55fr")]
position = Vector2(88, 46)

[node name="PlayerGroup" parent="." instance=ExtResource("3_lkmci")]
position = Vector2(221, 47)

[node name="Textbox" type="Panel" parent="."]
offset_left = 1.0
offset_top = 150.0
offset_right = 253.0
offset_bottom = 179.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lmcss")

[node name="RichTextLabel" type="RichTextLabel" parent="Textbox"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = -4.0
offset_right = 250.0
offset_bottom = 19.0
theme_override_fonts/normal_font = ExtResource("4_feu23")
text = "TEXT GOES HERE"
fit_content = true

[node name="GameOverScreen" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 63.0
offset_top = 42.0
offset_right = 251.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lmcss")

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverScreen"]
texture_filter = 1
layout_mode = 0
offset_left = 18.0
offset_top = 9.0
offset_right = 175.0
offset_bottom = 33.0
theme_override_fonts/normal_font = ExtResource("4_feu23")
text = "TEXT GOES HERE"
fit_content = true

[connection signal="pressed" from="CanvasLayer/Choice/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/Choice/Attack" to="EnemyGroup" method="_on_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/Choice/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="CanvasLayer/Choice/Defend" to="EnemyGroup" method="_on_defend_pressed"]
[connection signal="pressed" from="CanvasLayer/Choice/Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="CanvasLayer/Choice/Magic" to="EnemyGroup" method="_on_magic_pressed"]
[connection signal="pressed" from="CanvasLayer/Choice/Charge" to="." method="_on_charge_pressed"]
[connection signal="pressed" from="CanvasLayer/Choice/Heal" to="." method="_on_heal_pressed"]
